[build-system]
build-backend = "setuptools.build_meta"
requires = [ "setuptools>=45", "setuptools_scm[toml]>=6.2",]

[project]
classifiers = [ "Development Status :: 5 - Production/Stable", "Natural Language :: English", "Programming Language :: Python :: 3",]
description = "Launcher and Config Reader for LCLS Interactive IPython Sessions"
dynamic = [ "version", "readme", "dependencies", "optional-dependencies",]
keywords = []
name = "hutch-python"
requires-python = ">=3.9"

[[project.authors]]
name = "SLAC National Accelerator Laboratory"

[options]
zip_safe = false
include_package_data = true

[project.license]
file = "LICENSE"

[project.scripts]
hutch-python = "hutch_python.cli:main"
epicsarch-qs = "hutch_python.epics_arch:main"

[tool.setuptools_scm]
write_to = "hutch_python/_version.py"

[tool.isort]
skip = "load_conf.py"

[tool.setuptools.packages.find]
where = [ ".",]
include = [ "hutch_python*",]
namespaces = false

[tool.setuptools.dynamic.readme]
file = "README.rst"

[tool.setuptools.dynamic.dependencies]
file = [ "requirements.txt",]

[tool.setuptools.dynamic.optional-dependencies.test]
file = "dev-requirements.txt"

[tool.setuptools.dynamic.optional-dependencies.doc]
file = "docs-requirements.txt"
